--- a/blog.html
+++ b/blog.html
@@ -16,10 +16,12 @@
     <div class="brand"><a href="index.html">AI Pixel</a></div>
     <nav class="main-nav">
       <ul>
-        <li><a href="index.html"><i class="fa-solid fa-house"></i> INICIO</a></li>
-        <li><a class="active" href="blog.html"><i class="fa-solid fa-pen"></i> BLOG</a></li>
-        <li><a href="imagenes.html"><i class="fa-solid fa-image"></i> GALERIA</a></li>
-        <li><a href="videos.html"><i class="fa-brands fa-youtube"></i> VIDEOS</a></li>
+      <li><a href="index.html"><i class="fa-solid fa-house"></i> INICIO</a></li>
+      <li><a class="active" href="blog.html"><i class="fa-solid fa-pen"></i> BLOG</a></li>
+      <li><a href="imagenes.html"><i class="fa-solid fa-image"></i> FIGURAS</a></li>
+      <li><a href="videos.html"><i class="fa-solid fa-video"></i> VIDEOS</a></li>
+      <li><a href="nosotros.html"><i class="fa-solid fa-users"></i> NOSOTROS</a></li>
+      <li><a href="contactanos.html"><i class="fa-solid fa-envelope"></i> CONTACTOS</a></li>
       </ul>
     </nav>
   </header>
@@ -29,8 +31,10 @@
     <nav class="inline-nav">
       <a href="index.html"><i class="fa-regular fa-heart"></i> INICIO</a>
       <a href="blog.html"><i class="fa-solid fa-pen"></i> BLOG</a>
-      <a href="imagenes.html"><i class="fa-regular fa-images"></i> GALERIA</a>
+      <a href="imagenes.html"><i class="fa-regular fa-images"></i> FIGURAS</a>
       <a href="videos.html"><i class="fa-solid fa-video"></i> VIDEOS</a>
+      <a href="nosotros.html"><i class="fa-solid fa-users"></i> NOSOTROS</a>
+      <a href="contactanos.html"><i class="fa-solid fa-envelope"></i> CONTACTANOS</a>
     </nav>
     <figure class="cover">
       <img src="fondo2.jpg" alt="Figuras">
