--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
     </p>
 
     <nav class="h-nav">
-      <a href="index.html">INICIO</a>
-      <a href="blog.html">BLOG</a>
-      <a href="imagenes.html">GALERIA</a>
-      <a href="videos.html">VIDEOS</a>
+      <a href="index.html"><i class="fa-regular fa-heart"></i> INICIO</a>
+      <a href="blog.html"><i class="fa-solid fa-pen"></i> BLOG</a>
+      <a href="imagenes.html"><i class="fa-regular fa-images"></i> FIGURAS</a>
+      <a href="videos.html"><i class="fa-solid fa-video"></i> VIDEOS</a>
+      <a href="nosotros.html"><i class="fa-solid fa-users"></i> NOSOTROS</a>
+      <a href="contactanos.html"><i class="fa-solid fa-envelope"></i> CONTACTANOS</a>
     </nav>
 
     <div class="h-social">
