--- a/figuras.html
+++ b/figuras.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Figuras</title>
+  <title>Galeria</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
@@ -16,12 +16,10 @@
     <div class="brand"><a href="index.html">AI Pixel</a></div>
     <nav class="main-nav">
       <ul>
-      <li><a href="index.html"><i class="fa-solid fa-house"></i> INICIO</a></li>
-      <li><a href="blog.html"><i class="fa-solid fa-pen"></i> BLOG</a></li>
-      <li><a class="active" href="imagenes.html"><i class="fa-solid fa-image"></i> FIGURAS</a></li>
-      <li><a href="videos.html"><i class="fa-solid fa-video"></i> VIDEOS</a></li>
-      <li><a href="nosotros.html"><i class="fa-solid fa-users"></i> NOSOTROS</a></li>
-      <li><a href="contactanos.html"><i class="fa-solid fa-envelope"></i> CONTACTOS</a></li>
+        <li><a href="index.html"><i class="fa-solid fa-house"></i> INICIO</a></li>
+        <li><a href="blog.html"><i class="fa-solid fa-pen"></i> BLOG</a></li>
+        <li><a class="active" href="imagenes.html"><i class="fa-regular fa-images"></i> GALERIA</a></li>
+        <li><a href="videos.html"><i class="fa-solid fa-video"></i> VIDEOS</a></li>
       </ul>
     </nav>
   </header>
@@ -31,10 +29,8 @@
     <nav class="inline-nav">
       <a href="index.html"><i class="fa-regular fa-heart"></i> INICIO</a>
       <a href="blog.html"><i class="fa-solid fa-pen"></i> BLOG</a>
-      <a href="imagenes.html"><i class="fa-regular fa-images"></i> FIGURAS</a>
+      <a class="active-underline" href="imagenes.html"><i class="fa-regular fa-images"></i> GALERIA</a>
       <a href="videos.html"><i class="fa-solid fa-video"></i> VIDEOS</a>
-      <a href="nosotros.html"><i class="fa-solid fa-users"></i> NOSOTROS</a>
-      <a href="contactanos.html"><i class="fa-solid fa-envelope"></i> CONTACTANOS</a>
     </nav>
     <section class="gallery-grid">
       <figure>
